--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="container">
     </div>
-    <script type="text/javascript" src="./bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./bundle/bundle.js" charset="utf-8"></script>
   </body>
 </html>
