--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>webpack ES6 demo</title>
+    <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
     <div id="container">
