--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
-    <div id="container">
+    <div id="container" class="container">
     </div>
     <script type="text/javascript" src="/static/bundle.js" charset="utf-8"></script>
   </body>
