--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="container" class="container">
     </div>
-    <script type="text/javascript" src="/static/bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/vendor.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/app.js" charset="utf-8"></script>
   </body>
 </html>
